fixing advisors title left-align issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -2756,9 +2756,8 @@ ul h2 {
     padding: 40px 20px 0px 40px;
     margin :0 auto;
     display:inline-block;
-    width: 1000px;
-    min-width: 850px;
 }
+
 .advisors_section div {
     display:inline-block;
 }
